Bug 340818 - Tries to attach directories
Summary: Tries to attach directories
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.14.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-10 12:27 UTC by Salvo "LtWorf" Tomaselli
Modified: 2014-12-08 12:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 14.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Salvo "LtWorf" Tomaselli 2014-11-10 12:27:01 UTC
If I want to attach a file, and start by writing the directory the file is in, in the file dialog, and then press enter, kmail will try to attach the entire directory.

This is unintuitive because with the open file dialog, it is normally impossible to open directories, and there is a different dialog that is used for these cases.

My suggestion is to add a different command to attach a directory, with a proper directory selection dialog, because like this is just annoying as I always attach directories by mistake.

Reproducible: Always
Comment 1 Laurent Montel 2014-11-12 07:03:50 UTC
I don't understand how you can make an error?
If you want to attach a file you select file no ?
Comment 2 Salvo "LtWorf" Tomaselli 2014-11-12 08:00:39 UTC
I type a directory name to just go in there (like I do in any other dialog) and select the file or subdirectory from there (because I don't remember the full path). But the moment I hit enter to open it, it will try to attach it.
Comment 3 Laurent Montel 2014-12-08 12:38:43 UTC
Git commit 812e301af36f0e43bc0f3b80d8429daefc7b70e3 by Montel Laurent.
Committed on 08/12/2014 at 12:38.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 340818 - Tries to attach directories

FIXED-IN: 14.12

M  +1    -1    kmail/editor/kmcomposewin.cpp
M  +63   -26   messagecomposer/attachment/attachmentcontrollerbase.cpp
M  +6    -1    messagecomposer/attachment/attachmentcontrollerbase.h
M  +1    -1    messagecomposer/composer/composerviewbase.cpp

http://commits.kde.org/kdepim/812e301af36f0e43bc0f3b80d8429daefc7b70e3