Fix Bug 340818 - Tries to attach directories

FIXED-IN: 14.12
BUG: 340818