messagecomposer/composer/composerviewbase.cpp
@@ -1629,7 +1629,7 @@ MessageComposer::ComposerViewBase::MissingAttachment MessageComposer::ComposerVi
     if ( rc == KMessageBox::Cancel )
         return FoundMissingAttachmentAndCancel;
     if ( rc == KMessageBox::Yes ) {
-        m_attachmentController->showAddAttachmentDialog();
+        m_attachmentController->showAddAttachmentFileDialog();
         return FoundMissingAttachmentAndAddedAttachment;
     }
 
